fix slider items alignment

--- a/styles/product-slider.scss
+++ b/styles/product-slider.scss
@@ -86,6 +86,7 @@
     position: relative;
     max-width: 500px;
     height: 100%;
+    margin: 0 auto;
 
     .product-details {
       margin-top: 12px;
